rancher/manifests/backstage-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-http
spec:
  hostnames:
  - rancher.localhost
  parentRefs:
  - name: cilium-http-gateway
    namespace: cilium-http-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: rancher
      port: 80
